--- a/views/admin/posts.handlebars
+++ b/views/admin/posts.handlebars
@@ -1,7 +1,7 @@
-<h2>Categories List: </h2>
+<h2>Posts</h2>
 <hr>
-<a href="/admin/categories/add"><button class="btn btn-success">New Category</button></a>
-{{#each categories}}
+<a href="/admin/posts/add"><button class="btn btn-success">New Post</button></a>
+{{!-- {{#each categories}}
     <div class="card mt-4">
         <div class="card-body">
             <h4>{{name}}</h4>
@@ -15,4 +15,4 @@
             </form>
         </div>
     </div>
-{{/each}}
+{{/each}} --}}
