--- a/views/admin/addpost.handlebars
+++ b/views/admin/addpost.handlebars
@@ -8,7 +8,7 @@
         <h3 class="card-title mt-4">New Post</h3>
     </div>
     <div class="card-body">
-        <form action="/admin/categories/new" method="post"> {{! Change action path}}
+        <form action="/admin/posts/new" method="post">
             <label for="title">Title: </label>
                 <input type="text" name="title" id="title" class="form-control mt-1">
             <label for="slug">Slug: </label>
