Last commit before deploy

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,11 +69,11 @@
     <div class="position-sticky" style="top: 2rem;">
       <div class="p-4 mb-3 rounded">
         <h4 class="fst-italic">About</h4>
-        <p class="mb-0">I followed a brief tutorial to learn the basic concepts of NodeJS, communicate with MongoDB and use handlebars to create views and send back-end information to front-end.</p>
+        <p class="mb-0">I followed a brief tutorial to learn the basic concepts of NodeJS, communicate with MongoDB and use handlebars to create views and send back-end information to front-end. Also learned how to create middlewares, initiate sessions, use bcryptjs to create hash's, passport to control sessions, create helper scripts to use in the application,...</p>
       </div>
 
       <div class="p-4">
-        <h4 class="fst-italic">Archives</h4>
+        <h4 class="fst-italic">Categories</h4>
         <ol class="list-unstyled mb-0">
           {{#each categories}}
             <li><a href="/category/{{slug}}">{{name}}</a></li>
@@ -87,8 +87,7 @@
         <h4 class="fst-italic">Elsewhere</h4>
         <ol class="list-unstyled">
           <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
+          <li><a href="#">LinkedIn</a></li>
         </ol>
       </div>
     </div>
