--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -5,3 +5,7 @@
 {{#if error_msg}}
     <div class="alert alert-danger">{{error_msg}}</div>
 {{/if}}
+
+{{#if error}}
+    <div class="alert alert-danger">{{error}}</div>
+{{/if}}
