--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -9,9 +9,26 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        {{!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin">Admin Panel</a>
-        </li> --}}
+        {{#if user}}
+          {{#if role}}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/admin/categories">Categories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/admin/posts">Posts</a>
+            </li>
+          {{/if}}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user/logout">Logout</a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user/register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user/login">Login</a>
+          </li>
+        {{/if}}
       </ul>
     </div>
   </div>
