--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -1,15 +1,15 @@
 <div class="text-center singInBody" cz-shortcut-listen="true">
   <div class="form-signin w-100 m-auto">
-    <form>
+    <form method="post" action="/user/login">
       {{!-- <img class="mb-4" src="" alt="" width="72" height="57"> --}}
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
 
