Updating some links

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,8 +86,8 @@
       <div class="p-4">
         <h4 class="fst-italic">Elsewhere</h4>
         <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li><a href="https://github.com/mathmmo">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/mathmmo/">LinkedIn</a></li>
         </ol>
       </div>
     </div>
