some visual changes

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,34 +1,37 @@
 @charset "UTF-8";
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
 }
 
 body{
-    background-color: #dddada;
+  background-color: #dddada;
 }
 
 .content-area{
-    min-height: 50rem;
+  min-height: 50rem;
+  background-color: #ffff;
+  padding: 16px;
+  border-radius: 8px;
 }
 
 .card-title {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .btn-card{
-    width: 80px;
+  width: 80px;
 }
 
 .blog-footer {
-    padding: 1rem 0;
-    color: #727272;
-    text-align: center;
-    background-color: #f9f9f9;
-    border-top: .3rem solid #e5e5e5;
+  padding: 1rem 0;
+  color: #727272;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: .3rem solid #e5e5e5;
 }
 .blog-footer p:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* SingIn */
