--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,12 @@ body{
   border-radius: 8px;
 }
 
+.blog-post{
+  background-color: aliceblue;
+  padding: 8px;
+  border-radius: 8px;
+}
+
 .card-title {
   margin-left: 1rem;
 }
